<resources>
    <string name="app_name">Registro de usuarios</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hint_cliente">Cliente </string>
    <string name="hint_email" >Email</string>
    <string name="hint_ocupacion">Ocupacion ID</string>
    <string name="hint_balance" >Balance</string>
    <string name="guardar">Guardar</string>
    <string name="agregar">Agregar</string>
    <string name="hint_ingresos">Ingresos</string>
    <string name="ocupacion">Ocupaciones</string>
    <string name="ocupacionDescripcion">Ocupacion</string>
</resources>